[package]
name = "largest_product_in_a_grid"
version = "0.1.0"
authors = ["Eike Schulze <eike.schulze@web.de>"]

[lib]
name = "largest_product_in_a_grid_lib"
path = "src/lib.rs"

[[bin]]
name = "largest_product_in_a_grid"
path = "src/main.rs"

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true