[package]
name = "multiples_of_3_and_5"
version = "0.1.0"
authors = ["Eike Schulze <eike.schulze@web.de>"]

[lib]
name = "muliples_of_3_and_5_lib"
path = "src/lib.rs"

[[bin]]
name = "multiples"
path = "src/main.rs"

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true