[package]
name = "special_pythagorean_triplet"
version = "0.1.0"
authors = ["Eike Schulze <eike.schulze@web.de>"]

[lib]
name = "special_pythagorean_triplet_lib"
path = "src/lib.rs"

[[bin]]
name = "special_pythagorean_triplet"
path = "src/main.rs"

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
