[package]
name = "sum_square_difference"
version = "0.1.0"
authors = ["Eike Schulze <eike.schulze@web.de>"]

[lib]
name = "sum_square_difference_lib"
path = "src/lib.rs"

[[bin]]
name = "sum_square_difference"
path = "src/main.rs"

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true